# YasEngineSoftware_Old_Software_Renderer_Version_ArchivedArchived

./: .gitignore  .~lock.box.ods#  FIREFOX SESSION ABOUT SDL CLION STATIC LINKING.txt  LICENSE  README.md  YasEngineSoftware.sln  box.ods
Documentation/: Doxyfile
HelloSDL3/: HelloSDL3.vcxproj  HelloSDL3.vcxproj.filters  main.cpp
Shaders/: squareFragmentShader.frag  squareVertexShader.vert
YasEngine/: .editorconfig  BackupCpp.cpp  Button.cpp  Button.hpp  Circle.cpp  Circle.hpp  Collectible.cpp  Collectible.hpp  Collider.cpp  Collider.hpp  CosinePointsGenerator.cpp  CosinePointsGenerator.hpp  CosinusPointsGenerator.cpp  CosinusPointsGenerator.hpp  Destroyable.cpp  Destroyable.hpp  FibonacciPointsGenerator.cpp  FibonacciPointsGenerator.hpp  FontObject.cpp  FontObject.hpp  FontSurface.cpp  FontSurface.hpp  GameObject.hpp  InputOutputHandler.hpp  LineSegment.hpp  MapFrame.hpp  Math.cpp  Math.hpp  Node.cpp  (+123 more)
YasEngineSoftware/: BackupCpp.cpp  Button.cpp  Button.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  Collectible.cpp  Collectible.hpp  Collider.cpp  Collider.hpp  Collider.hpp.bak  CosinusPointsGenerator.cpp  CosinusPointsGenerator.hpp  CosinusPointsGenerator.hpp.bak  Destroyable.cpp  Destroyable.hpp  FibonacciPointsGenerator.cpp  FibonacciPointsGenerator.hpp  FontObject.cpp  FontObject.hpp  FontSurface.cpp  FontSurface.hpp  FontsProject.ods  GameObject.hpp  GameObject.hpp.bak  InputOutputHandler.h  InputOutputHandler.hpp  LineDrawinTester.cpp  LineDrawingTester.hpp  Main.cpp  Main.cpp.bak  Main.hpp  Math.cpp  Math.hpp  MathematicsFunSurface.cpp  MathematicsFunSurface.hpp  Matrix4D.hpp  Node.cpp  Node.hpp  NumbersGenerator.hpp  (+71 more)
(+387 files in other folders)
